restructured jetpack controls

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
-/EasyRoads3Dv3/
+
+/[Aa]ssets/EasyRoads3D/html/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
