--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
-/[Aa]ssets/EasyRoads3D/html/
+/[Aa]ssets/Imports/EasyRoads3D/html/
+/[Aa]ssets/Imports/Paid/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
