--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.14.16",
-    "com.unity.ide.rider": "1.2.1",
-    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ai.navigation": "2.0.5",
+    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.3.0",
-    "com.unity.probuilder": "4.4.0",
-    "com.unity.terrain-tools": "3.0.1-preview",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "2.1.4",
-    "com.unity.timeline": "1.2.18",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.inputsystem": "1.11.2",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.probuilder": "6.0.4",
+    "com.unity.terrain-tools": "5.1.2",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
