--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ sysinfo.txt
 crashlytics-build.properties
 
 debug.log
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+UserSettings/Layouts/default-6000.dwlt
