--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,28 +1,29 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "2.0.5",
+    "com.unity.ai.navigation": "2.0.9",
     "com.unity.cinemachine": "3.1.2",
-    "com.unity.collab-proxy": "2.5.2",
-    "com.unity.editorcoroutines": "1.0.0",
+    "com.unity.collab-proxy": "2.10.2",
+    "com.unity.editorcoroutines": "1.0.1",
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.11.2",
-    "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.performance.profile-analyzer": "1.2.2",
-    "com.unity.postprocessing": "3.4.0",
-    "com.unity.probuilder": "6.0.4",
-    "com.unity.settings-manager": "2.0.1",
-    "com.unity.terrain-tools": "5.1.2",
-    "com.unity.test-framework": "1.4.5",
-    "com.unity.testtools.codecoverage": "1.2.6",
-    "com.unity.timeline": "1.8.7",
+    "com.unity.inputsystem": "1.17.0",
+    "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.performance.profile-analyzer": "1.2.4",
+    "com.unity.postprocessing": "3.5.1",
+    "com.unity.probuilder": "6.0.8",
+    "com.unity.settings-manager": "2.1.1",
+    "com.unity.terrain-tools": "5.3.1",
+    "com.unity.test-framework": "1.6.0",
+    "com.unity.testtools.codecoverage": "1.2.7",
+    "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.5",
+    "com.unity.visualscripting": "1.9.9",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -51,6 +52,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
